--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body ng-app="sample">
 
    <div class="container">
-    <ul><li><a href="#NewEvent"> Add New Event</a></li>
-      <li><a href="#DisplayEvent"> Display Event</a></li>
+    <ul><li><a href="#!NewEvent"> Add New Event</a></li>
+      <li><a href="#!DisplayEvent"> Display Event</a></li>
   </ul>
     <div ng-view></div>
    </div>
