--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" >
   <head>
     <meta charset="utf-8">
-   
-    <!-- <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="Css/bootstrap.min.css">
+    <script src="Scripts/jquery.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.js"></script>
 <script src="Scripts/app.js"></script>
