--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body ng-app="sample">
 
-   <div class="container">
+   <div class="container" style="width:100%">
     <ul><li><a href="#!NewEvent"> Add New Event</a></li>
       <li><a href="#!DisplayEvent"> Display Event</a></li>
   </ul>
