--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
-    <link rel="stylesheet" href="Css/style.css">
+
+    <link rel="stylesheet" href="Css/loginStyles.css">
+
     <script src="Scripts/jquery.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.js"></script>
 <script src="Scripts/app.js"></script>
-
+<!-- <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a81368914c.js"></script> -->
+<link href="Css/FontFamilyPoppins.css" rel="stylesheet">
+<script src="Scripts/fontAwesomeKit.js"></script>
+<link rel="stylesheet" href="Css/style.css">
 <script>
+
 $(document).on("scroll", function(){
 		if
-      ($(document).scrollTop() > 20){
+      ($(document).scrollTop() > 10){
 		  $("header").addClass("shrink");
 		}
 		else
@@ -22,23 +29,46 @@ $(document).on("scroll", function(){
 			$("header").removeClass("shrink");
 		}
 	});
-  $('.table-scroll').slimScroll({
-		height: '100px',
-    // width: '300px',
-		color: "#EEE"
-	});
+  function zoom(e){
+        console.log("inside zoom");
+        var zoomer = e.currentTarget;
+        e.offsetX ? offsetX = e.offsetX : offsetX = e.touches[0].pageX
+        e.offsetY ? offsetY = e.offsetY : offsetX = e.touches[0].pageX
+        x = offsetX/zoomer.offsetWidth*100
+        y = offsetY/zoomer.offsetHeight*100
+        zoomer.style.backgroundPosition = x + '% ' + y + '%';
+      }
+
+
+function LoginFormLoad(){
+  const inputs = document.querySelectorAll(".input");
+function addcl(){
+	let parent = this.parentNode.parentNode;
+	parent.classList.add("focus");
+}
+function remcl(){
+	let parent = this.parentNode.parentNode;
+	if(this.value == ""){
+		parent.classList.remove("focus");
+	}
+}
+inputs.forEach(input => {
+	input.addEventListener("focus", addcl);
+	input.addEventListener("blur", remcl);
+})
+
+}
+
+
 </script>
 
   </head>
   <body ng-app="sample">
     <header >
-    
+  <span class="H3Class">Bajaj Housing Finance Limited </span>  
           </header>
    <div  style="width:100%">
-   
-    <!-- <ul><li><a href="#!NewEvent"> Add New Event</a></li>
-      <li><a href="#!DisplayEvent"> Display Event</a></li>
-  </ul> -->
+  
     <div ng-view></div>
    </div>
 
